public class CanModify extends ReadOnly {



    public CanModify(String firstNam, String lastName, int id, String address) {
        super(firstNam, lastName, id, address);
    }
}
