public class PdfDoc extends TextDoc{

    public PdfDoc(String docName, String description, double fileSize) {
        super(docName, description, fileSize);
    }

}
