public class PictureDoc extends MediaDoc {

    public PictureDoc(String docName, String description, double fileSize, double imageDimensionHeight, double imageDimesionWidth) {
        super(docName, description, fileSize, imageDimensionHeight, imageDimesionWidth);
    }




}
