public class ReadOnly extends Author {

    public ReadOnly(String firstNam, String lastName, int id, String address) {
        super(firstNam, lastName, id, address);
    }
}
