public class TextDoc extends Documents {

    public TextDoc(String docName, String description, double fileSize) {
        super(docName, description, fileSize);
    }


}
